# cmake-based-cpp-project-template

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  index.html  params.json
.circleci/: config.yml
ci/: before_install.sh  script.sh
cmake/: DARTMacros.cmake  Macros.cmake  README.md
dart/: CMakeLists.txt  main.cpp
dart/common/: CMakeLists.txt  Command.cpp  Command.h  Config.h.in  Enums.h  Types.h
docs/: CODE STYLE GUIDE.md
doxygen/: Doxyfile.in  mainpage.dox
examples/: CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt  Main.cpp
include/common/: CMakeLists.txt  Template.hpp
include/cpptemplate/: Config.hpp.in
include/cpptemplate/common/: CMakeLists.txt  Template.hpp  common.hpp.in
src/: main.cpp
src/common/: CMakeLists.txt  Template.cpp
tests/: CMakeLists.txt  testTemplate.cpp
tools/beautifier/: beautify.sh  check.sh  dart.cfg  uncrustify_default_0.59.cfg
