get_filename_component(example_name ${CMAKE_CURRENT_LIST_DIR} NAME)
file(GLOB ${example_name}_srcs "*.cpp" "*.hpp")
add_executable(${example_name} ${${example_name}_srcs})
target_link_libraries(${example_name} dart)
set_target_properties(${example_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
